update giao dien noVnC

--- a/vnc.html
+++ b/vnc.html
@@ -89,7 +89,7 @@
     </div>
 
     <div id="control_bar" class="control-bar-settings">
-        <div id="width_control_bar" style="display: inline-flex;">
+        <div id="width_control_bar" style="display: contents;">
             <div class="general-settings" onclick="toggleExtraKeys()">
                 <div class="private-settings">
                     <input type="image" alt="Extra keys" src="app/images/toggleextrakeys.svg" id=""
